welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:5: error: '<-' expected but ')' found.
for (k->1 to 5){;
              ^PictureMono3:10: error: illegal start of simple expression
}
^